# image-to-ascii-cpp

./: .gitignore  CMakeLists.txt  README.md  out.txt
include/: algorithm.hpp  arguments.hpp  bitmap.hpp  console.hpp  convert.hpp  image.hpp  player.hpp
src/: algorithm.cc  arguments.cc  bitmap.cc  bitmap.ostream.cc  console.cc  convert.cc  image.cc  main.cc  player.cc
test/: memcp.c  print_struct.cc  sort_test.cc  time_test.c  time_test.cc
